modified:   contact.html 	modified:   courses.html 	modified:   css/bootstrap.css 	modified:   gallery.html 	new file:   images/apple.jpg 	deleted:    images/hardware.png 	deleted:    images/img_bg_1.jpg 	modified:   index.html 	modified:   pricing.html

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 text-right">
-                            <p class="num">Call: +91 99537 02936</p>
+                            <p class="num">Call: +91 8700808821</p>
                             <ul class="fh5co-social">
                                 <li><a href="#"><i class="icon-twitter"></i></a></li>
                                 <li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -110,14 +110,14 @@
             </div>
         </nav>
 
-        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/apple.jpg);" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <h1>Contact Us</h1>
+                                <h1 style="font-weight: 500;font-family: 'Playfair Display', serif;">Contact Us</h1>
                                 <h2></h2>
                             </div>
                         </div>
@@ -134,8 +134,8 @@
                         <div class="fh5co-contact-info">
                             <h3>Contact Information</h3>
                             <ul>
-                                <li class="address">148,Street No,04,Shahid Bhagat Singh Colony <br> Near Toll Text, <br> West Karawal Nagar Delhi, 110094 India </li>
-                                <li class="phone"><a href="tel://99537 02936">+91 99537 02936</a></li>
+                                <li class="address">Circular Rd, Part-6, Sonia Vihar, <br> Delhi, 110094 </li>
+                                <li class="phone"><a href="tel://8700808821">+91 8700808821</a></li>
                                 <li class="email"><a href="mailto:info@jogindrakumar">info@jogindrakumar.com</a></li>
                                 <li class="url"><a href="https://jogindrakumar.com/project">jogindrakumar.com</a></li>
                             </ul>
