--- a/courses.html
+++ b/courses.html
@@ -82,7 +82,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 text-right">
-                            <p class="num">Call: +91 99537 02936</p>
+                            <p class="num">Call: +91 8700808821</p>
                             <ul class="fh5co-social">
                                 <li><a href="#"><i class="icon-twitter"></i></a></li>
                                 <li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -115,14 +115,14 @@
             </div>
         </nav>
 
-        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/apple.jpg);" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <h1>Courses</h1>
+                                <h1 style="font-weight: 500;font-family: 'Playfair Display', serif;">Courses</h1>
                                 <h2></h2>
                             </div>
                         </div>
@@ -144,12 +144,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-push-5 animate-box">
-                            <img class="img-responsive" src="images/englishcourse2.0.png" alt="work">
+                            <img class="img-responsive" src="images/web.png" alt="work">
                         </div>
                         <div class="col-md-4 col-md-pull-8 animate-box">
                             <div class="mt">
-                                <h3>We Want You To Learn English</h3>
-                                <p>English language is everywhere . if you want to get job as quick as possible then you have to learn English</p>
+                                <h3>We Want You To Learn Learn Web Development</h3>
+                                <p>Learn Web Development is everywhere . if you want to get job as quick as possible then you have to learn Learn Web Development</p>
                                 <ul class="list-nav">
                                     <li><i class="icon-check2"></i>Upgrade your skill</li>
                                     <li><i class="icon-check2"></i>To secure your future </li>
@@ -193,8 +193,8 @@
             <div class="container-fluid proj-bottom">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-                        <a href="#"><img src="images/englishcourse2.0.png" alt="jogindrakumar.com" class="img-responsive">
-                            <h3>Spoken English 2.0</h3>
+                        <a href="#"><img src="images/c++.png" alt="jogindrakumar.com" class="img-responsive">
+                            <h3>C++</h3>
                             <span>View Course</span>
                         </a>
                     </div>
@@ -205,8 +205,8 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-                        <a href="#"><img src="images/hardware.png" alt="jogindrakumar.com" class="img-responsive">
-                            <h3>Hardware and Networking</h3>
+                        <a href="#"><img src="images/python programming.png" alt="jogindrakumar.com" class="img-responsive">
+                            <h3>Python</h3>
                             <span>View Course</span>
                         </a>
                     </div>
@@ -217,14 +217,14 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-                        <a href="#"><img src="images/shorthand.png" alt="jogindrakumar.com" class="img-responsive">
-                            <h3>Shorthand</h3>
+                        <a href="#"><img src="images/java.png" alt="jogindrakumar.com" class="img-responsive">
+                            <h3>Java</h3>
                             <span>View Course</span>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
-                        <a href="#"><img src="images/degree.png" alt="jogindrakumar.com" class="img-responsive">
-                            <h3>Degree Courses</h3>
+                        <a href="#"><img src="images/php.png" alt="jogindrakumar.com" class="img-responsive">
+                            <h3>PHP</h3>
                             <span>View Course</span>
                         </a>
                     </div>
