--- a/gallery.html
+++ b/gallery.html
@@ -78,7 +78,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 text-right">
-                            <p class="num">Call: +91 99537 02936</p>
+                            <p class="num">Call: +91 8700808821</p>
                             <ul class="fh5co-social">
                                 <li><a href="#"><i class="icon-twitter"></i></a></li>
                                 <li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -109,14 +109,14 @@
             </div>
         </nav>
 
-        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/apple.jpg);" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <h1>Photo Gallery</h1>
+                                <h1 style="font-weight: 500;font-family: 'Playfair Display', serif;">Photo Gallery</h1>
                                 <h2>Photography helps people to see.” “What I like about photographs is that they capture a moment that's gone forever, impossible to reproduce.” “When I have a camera in my hand, I know no fear</h2>
                             </div>
                         </div>
