--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
 
 
 </head>
@@ -80,7 +83,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 text-right">
-                            <p class="num">Call: +91 99537 02936</p>
+                            <p class="num">Call: +91 8700808821</p>
                             <ul class="fh5co-social">
                                 <li><a href="#"><i class="icon-twitter"></i></a></li>
                                 <li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -113,14 +116,14 @@
             </div>
         </nav>
 
-        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/apple.jpg);" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <h1>Gurukul Infotech Computer Institute</h1>
+                                <h1 style="font-weight: 500;font-family: 'Playfair Display', serif;">Gurukul Infotech Computer Institute</h1>
                                 <h2></h2>
                                 <p><a class="btn btn-primary btn-lg btn-learn" href="#availablecourse">Take A Course</a> <a class="btn btn-primary btn-lg popup-vimeo btn-video" href="#"><i class="icon-play"></i> Watch Video</a></p>
                             </div>
