--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,7 @@
     <title>Gurukul Infotech Computer Institute</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Gurukul Infotech Computer Institute">
-    <meta name="description" content="Gurukul Infotech Computer Institute is a computer institute that cover multiple computer course , latest courses , degree courses, in 148,Street No,04,Shahid Bhagat Singh Colony Near Toll Text,West Karawal Nagar Delhi, 110094 India #jogindrakumar.com">
+    <meta name="description" content="Gurukul Infotech Computer Institute is a computer institute that cover multiple computer course , latest courses , degree courses, in Circular Rd, Part-6, Sonia Vihar, Delhi, 110094 India #jogindrakumar.com">
     <meta name="keywords" content="English , tally 9.0,basic computer course ,multiple computer course , latest courses , degree courses, web designing , web development , DTP, jogindrakumar.com, shorthand, computer hardware and networking">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -51,10 +51,10 @@
     <!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 
 
 </head>
